Added support for containers to control an "nginx mode" - i.e. which config to use. Added support to pass media through php (fpm)

--- a/nginx/sites-available/content-restricted.conf
+++ b/nginx/sites-available/content-restricted.conf
@@ -30,27 +30,21 @@ server {
         }
 
 	location / {
-                index index.php index.html index.htm; 
-
-                if (-f $request_filename) { 
-                    expires 30d; 
-                    break; 
-                }
-
-                if (!-e $request_filename) { 
-                    rewrite ^(.+)$ /index.php?q=$1 last; 
-                } 
+            # Put pdfs, mp4 and mp3 files through PHP            
+            rewrite ^(.*wp-content\/uploads\/.+\.(pdf|mp4|mp3))$ /?getfile last; 
+            # Just display files that exist
+            if (!-e $request_filename) { 
+                rewrite ^(.+)$ /index.php?q=$1 last; 
+            }
 	}
+        
+        # pass PHP scripts to FastCGI server
+        #
+        location ~ \.php$ {
+            include snippets/fastcgi-php.conf;
 
-	# pass PHP scripts to FastCGI server
-	#
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-	
-		# With php-fpm (or other unix sockets):
-		fastcgi_pass unix:/var/run/php7-fpm.sock;
-		# With php-cgi (or other tcp sockets):
-		# fastcgi_pass 127.0.0.1:9000;
+            # With php-fpm (or other unix sockets):
+            fastcgi_pass unix:/var/run/php7-fpm.sock;
 	}
 
 	# deny access to .htaccess files, if Apache's document root
@@ -58,5 +52,5 @@ server {
 	#
 	location ~ /\.ht {
 		deny all;
-	}
+        }
 }
