--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,7 +18,7 @@ startretries=0
 
 
 [program:nginx]
-command=nginx -g 'daemon off;'
+command=start-nginx
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
