--- a/hooks/build
+++ b/hooks/build
@@ -1,4 +1,6 @@
 #!/bin/bash
+set -e
+
 if [ "$DOCKER_TAG" == "latest" ] ; then 
     docker build --build-arg BASE_IMAGE=blackpeardigital/php-nginx:latest -t $DOCKER_REPO:latest .
     docker build --build-arg BASE_IMAGE=blackpeardigital/php-nginx:dev -t $DOCKER_REPO:dev .
