--- a/nginx/sites-available/normal.conf
+++ b/nginx/sites-available/normal.conf
@@ -11,6 +11,11 @@ server {
 
 	server_name _;
 
+        # Block access to settings
+        location ~* ^\/settings\/.*$ {
+            deny all;
+        }
+
         # Block access to upload directory
         location ~* ^\/wp-content\/uploads\/$ {
             deny all;
