Ensure backups path isn't directly accessibly

--- a/nginx/sites-available/content-restricted.conf
+++ b/nginx/sites-available/content-restricted.conf
@@ -24,6 +24,10 @@ server {
         location ~* ^\/wp-content\/themes\/.*\.php$ {
             deny all;
         }
+        # Block direct access to backups
+        location ~* ^\/wp-content\/backups\/.*$ {
+            deny all;
+        }
         # Block access to .htaccess files
         location ~* ^\/.*\.htaccess$ {
             deny all;
