--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,8 @@
-.git
-.gitignore
-.travis.yml
-LICENSE.md
-README.md
-build.sh
-deploy.sh
+/.git
+/.gitignore
+/.travis.yml
+/LICENSE.md
+/README.md
+/build.sh
+/deploy.sh
+/hooks
