Formatted conf files

--- a/nginx/sites-available/content-restricted.conf
+++ b/nginx/sites-available/content-restricted.conf
@@ -1,59 +1,59 @@
 server {
-        error_log  /dev/stderr;
-        access_log /dev/stdout;
+    error_log  /dev/stderr warn;
+    access_log /dev/stdout;
 
 	listen 80 default_server;
 	listen [::]:80 default_server;
 
 	root /var/www/html;
 
-        index index.php index.html index.htm; 
+    index index.php index.html index.htm; 
 
 	server_name _;
 
-        # Block access to settings
-        location ~* ^\/settings\/.*$ {
-            deny all;
-        }
+    # Block access to settings
+    location ~* ^\/settings\/.*$ {
+        deny all;
+    }
 
-        # Block access to upload directory
-        location ~* ^\/wp-content\/uploads\/$ {
-            deny all;
-        }
-        # Block direct access to themes php
-        location ~* ^\/wp-content\/themes\/.*\.php$ {
-            deny all;
-        }
-        # Block direct access to backups
-        location ~* ^\/wp-content\/backups\/.*$ {
-            deny all;
-        }
-        # Block access to .htaccess files
-        location ~* ^\/.*\.htaccess$ {
-            deny all;
-        }
+    # Block access to upload directory
+    location ~* ^\/wp-content\/uploads\/$ {
+        deny all;
+    }
+    # Block direct access to themes php
+    location ~* ^\/wp-content\/themes\/.*\.php$ {
+        deny all;
+    }
+    # Block direct access to backups
+    location ~* ^\/wp-content\/backups\/.*$ {
+        deny all;
+    }
+    # Block access to .htaccess files
+    location ~* ^\/.*\.htaccess$ {
+        deny all;
+    }
 
-        # Block access to config files
-        location ~* (wp-config-sample|wp-config|wp-comments-post)\.php$ {
-            deny all;
-        }
+    # Block access to config files
+    location ~* (wp-config-sample|wp-config|wp-comments-post)\.php$ {
+        deny all;
+    }
 
 	location / {
-            # Put pdfs, mp4 and mp3 files through PHP            
-            rewrite ^(.*wp-content\/uploads\/.+\.(pdf|mp4|mp3))$ /?getfile last; 
-            # Just display files that exist
-            if (!-e $request_filename) { 
-                rewrite ^(.+)$ /index.php?q=$1 last; 
-            }
+        # Put pdfs, mp4 and mp3 files through PHP            
+        rewrite ^(.*wp-content\/uploads\/.+\.(pdf|mp4|mp3))$ /?getfile last; 
+        # Just display files that exist
+        if (!-e $request_filename) { 
+            rewrite ^(.+)$ /index.php?q=$1 last; 
+        }
 	}
         
-        # pass PHP scripts to FastCGI server
-        #
-        location ~ \.php$ {
-            include snippets/fastcgi-php.conf;
+    # pass PHP scripts to FastCGI server
+    #
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
 
-            # With php-fpm (or other unix sockets):
-            fastcgi_pass unix:/var/run/php7-fpm.sock;
+        # With php-fpm (or other unix sockets):
+        fastcgi_pass unix:/var/run/php7-fpm.sock;
 	}
 
 	# deny access to .htaccess files, if Apache's document root
@@ -61,5 +61,5 @@ server {
 	#
 	location ~ /\.ht {
 		deny all;
-        }
+    }
 }
