--- a/nginx/sites-available/normal.conf
+++ b/nginx/sites-available/normal.conf
@@ -1,63 +1,63 @@
 server {
-        error_log  /dev/stderr;
-        access_log /dev/stdout;
+    error_log  /dev/stderr warn;
+    access_log /dev/stdout;
 
 	listen 80 default_server;
 	listen [::]:80 default_server;
 
 	root /var/www/html;
 
-        index index.php index.html index.htm; 
+    index index.php index.html index.htm; 
 
 	server_name _;
 
-        # Block access to settings
-        location ~* ^\/settings\/.*$ {
-            deny all;
-        }
+    # Block access to settings
+    location ~* ^\/settings\/.*$ {
+        deny all;
+    }
 
-        # Block access to upload directory
-        location ~* ^\/wp-content\/uploads\/$ {
-            deny all;
-        }
-        # Block direct access to themes php
-        location ~* ^\/wp-content\/themes\/.*\.php$ {
-            deny all;
-        }
-        # Block direct access to backups
-        location ~* ^\/wp-content\/backups\/.*$ {
-            deny all;
-        }
-        # Block access to .htaccess files
-        location ~* ^\/.*\.htaccess$ {
-            deny all;
-        }
+    # Block access to upload directory
+    location ~* ^\/wp-content\/uploads\/$ {
+        deny all;
+    }
+    # Block direct access to themes php
+    location ~* ^\/wp-content\/themes\/.*\.php$ {
+        deny all;
+    }
+    # Block direct access to backups
+    location ~* ^\/wp-content\/backups\/.*$ {
+        deny all;
+    }
+    # Block access to .htaccess files
+    location ~* ^\/.*\.htaccess$ {
+        deny all;
+    }
 
-        # Block access to config files
-        location ~* (wp-config-sample|wp-config|wp-comments-post)\.php$ {
-            deny all;
-        }
+    # Block access to config files
+    location ~* (wp-config-sample|wp-config|wp-comments-post)\.php$ {
+        deny all;
+    }
 
 	location / {
-            # Just display files that exist
-            if (!-e $request_filename) { 
-                rewrite ^(.+)$ /index.php?q=$1 last; 
-            }
+        # Just display files that exist
+        if (!-e $request_filename) { 
+            rewrite ^(.+)$ /index.php?q=$1 last; 
+        }
 	}
 
         # pass PHP scripts to FastCGI server
         #
-        location ~ \.php$ {
-            include snippets/fastcgi-php.conf;
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
 
-            # With php-fpm (or other unix sockets):
-            fastcgi_pass unix:/var/run/php7-fpm.sock;
-        }
+        # With php-fpm (or other unix sockets):
+        fastcgi_pass unix:/var/run/php7-fpm.sock;
+    }
 
 	# deny access to .htaccess files, if Apache's document root
 	# concurs with nginx's one
 	#
 	location ~ /\.ht {
 		deny all;
-        }
+    }
 }
