--- a/conf.d/extra.conf
+++ b/conf.d/extra.conf
@@ -1,3 +1,7 @@
 
 client_max_body_size 64M;
 client_body_buffer_size 64M;
+
+proxy_read_timeout 1200;
+proxy_connect_timeout 1200;
+proxy_send_timeout 1200;
