--- a/ini/uploads.ini
+++ b/ini/uploads.ini
@@ -1,6 +1,7 @@
 upload_max_filesize=64M
 ; Use explicit bytes, to bug where php code tries to parse value as int
 post_max_size=67108864
-memory_limit=64M
-max_execution_time=300
-max_input_time=300
+memory_limit=512M
+max_execution_time=1200
+max_input_time=1200
+default_socket_timeout=1200 
