--- a/nginx/sites-available/normal.conf
+++ b/nginx/sites-available/normal.conf
@@ -52,6 +52,9 @@ server {
 
         # With php-fpm (or other unix sockets):
         fastcgi_pass unix:/var/run/php7-fpm.sock;
+        fastcgi_read_timeout 1200;
+        fastcgi_send_timeout 1200;
+        fastcgi_connect_timeout 1200;
     }
 
 	# deny access to .htaccess files, if Apache's document root
