--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,41 +1,45 @@
-name: Publish Docker image
+name: Build and Publish Docker Image
 
 on:
   push:
-    branches:
-      - main
-      - master
     tags:
-      - '*'
-  release:
-    types: [published]
+      - '*'  # Trigger on any tag push
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Extract metadata (tags, labels) for Docker
+
+      - name: Extract WP Version from Tag
+        id: extract
+        run: |
+          # The Git tag is the WordPress version (e.g. "6.0")
+          WP_VERSION=${GITHUB_REF#refs/tags/}
+          echo "Extracted WP_VERSION: $WP_VERSION"
+          echo "::set-output name=wp_version::$WP_VERSION"
+
+      - name: Extract Docker Metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@e1a45f6e54773201956dae54cd74ee7fdcafe877
         with:
           images: ${{ github.repository }}
           tags: |
-            type=ref,event=tag
-            type=raw,event=branch,value=latest,enable={{is_default_branch}}
-      - name: Build and push Docker image
+            type=raw,value=${{ steps.extract.outputs.wp_version }}
+
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
+          build-args: |
+            WP_VERSION=${{ steps.extract.outputs.wp_version }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
