--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Image
+        if: steps.check_tag.outputs.tag_exists == 'false'
         uses: docker/build-push-action@v2
         with:
           context: .
