--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Check if Git Tag Exists
         id: check_tag
         run: |
-          TAG="${{ steps.wp_version.outputs.version }}"
+          TAG="8.3-${{ steps.wp_version.outputs.version }}"
           if git rev-parse "$TAG" >/dev/null 2>&1; then
             echo "Tag $TAG already exists."
             echo "::set-output name=tag_exists::true"
@@ -37,7 +37,7 @@ jobs:
       - name: Create and Push Git Tag using PAT
         if: steps.check_tag.outputs.tag_exists == 'false'
         run: |
-          TAG="${{ steps.wp_version.outputs.version }}"
+          TAG="8.3-${{ steps.wp_version.outputs.version }}"
           echo "Creating and pushing Git tag: $TAG"
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
